--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pylog",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "license": "MIT",
   "author": {
     "name": "Satyam Soni",
@@ -9,17 +9,19 @@
   "homepage": "https://github.com/satyamsoni2211/logger#readme",
   "dependencies": {
     "axios": "^0.27.2",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "rollup": "^2.77.2",
+    "tslib": "^2.4.0"
   },
-  "main": "./lib-esm/index.js",
-  "types": "./declarations/index.d.ts",
+  "type": "module",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "exports": {
-    "require": "./lib/index.js",
-    "import": "./lib-esm/index.js"
+    "import": "./index.js",
+    "require": "./index.cjs"
   },
   "scripts": {
-    "transpile": "rm -rf lib lib-esm _bundles declarations && tsc && tsc -p tsconfig_esm.json && tsc -p tsconfig_declaration.json",
-    "bundle": "webpack",
+    "transpile": "rm -rf lib declarations && tsc && tsc -p tsconfig.declaration.json && rollup -c rollup.config.js",
     "test": "vitest",
     "testui": "vitest --ui",
     "coverage": "vitest run --coverage",
@@ -27,17 +29,21 @@
   },
   "description": "Front End Logger Abstraction Library",
   "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@rollup/plugin-typescript": "^8.3.4",
     "@types/axios": "^0.14.0",
+    "@types/moment": "^2.13.0",
     "@vitest/ui": "^0.20.3",
-    "awesome-typescript-loader": "^5.2.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "c8": "^7.12.0",
     "jsdocs": "^1.0.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-terser": "^7.0.2",
     "typedoc": "^0.23.10",
     "typescript": "^4.7.4",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "vitest": "^0.20.2",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "@types/moment": "^2.13.0"
+    "vitest": "^0.20.2"
   }
 }
