--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
         "spec/**/*",
     ],
     "compilerOptions": {
-        "target": "ESNext", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-        "module": "ESNext", /* Specify what module code is generated. */
+        "target": "ES6", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+        "module": "es6", /* Specify what module code is generated. */
         "rootDir": "./src", /* Specify the root folder within your source files. */
         "moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
         "baseUrl": "./src", /* Specify the base directory to resolve non-relative module names. */
